syntax = "proto3";
package Consulta;

service ConsultaRequestService {
    rpc ConsultaRequest(Datos) returns (RespuestaBroker) {}
}

service ConsultaBrokerService {
    rpc ConsultaBroker(Consulta) returns (Respuesta) {}
}

message Datos{
    string Url = 1;
    string Reloj = 2;
}

message RespuestaBroker {
    string IP = 1;
    string Reloj = 2;
}

message Consulta {
    string NombreDominio = 1;
}

message Respuesta {
    string IP = 1;
    string Reloj = 2;
}
